--- a/TestExcel/Views/TimeSchedule/Index.cshtml
+++ b/TestExcel/Views/TimeSchedule/Index.cshtml
@@ -16,10 +16,13 @@
         var colspan; var tmp_id; var subject_id; var subject_name; var subject_credit; var subject_number; var subject_hour;
         var tmp1; var tmp2; var tmp3; var tmp4; var tmp5; var tmp6; var j; var a; var i;
         var date2 = ["M", "T", "W", "H", "F", "S"];
+        $("#DDL_DEPARTMENT").val(@ViewBag.DepartDDLSelected);
         $("#DDL_BRANCH").val(@ViewBag.DDLSelected);
-        $("#DDL_BRANCH").change(function () {
+        $("#DDL_DEPARTMENT").change(function () {
+            $("#Count").val(1);
             $("#BRANCH_FORM").submit();
         });
+        $("#DDL_BRANCH").val(@ViewBag.DDLSelected);
             $(".draggable").draggable({
                 cursor: "move",
                 revert: "invalid",
@@ -201,188 +204,201 @@
 
 @using (Html.BeginForm("Index", "TimeSchedule", FormMethod.Post, new { id = "BRANCH_FORM", name = "BRANCH_FORM" }))
 {
-    @Html.DropDownList("DDL_BRANCH", (SelectList)ViewBag.ddl_Branch)
-}
-<table class="table table-bordered" id="TableLocation">
-    <thead>
-        <tr>
-            <th></th>
-            <th>
-                ลำดับ
-            </th>
-            <th>
-                รหัสวิชา
-            </th>
-            <th>
-                ชื่อวิชา
-            </th>
-            <th>
-                หน่วยกิต
-            </th>
-            <th>
-                ตอน
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model.Where(x => x.SECTION_NUMBER != ""))
-        {
-            {
-                i++;
-                string[] e = item.SUBJECT_CREDIT.Split('(', ')');
-                j += int.Parse(e[0]);
-                string[] ee = e[1].Split('-');
-                k += int.Parse(ee[0]);
-                l += int.Parse(ee[1]);
-                m += int.Parse(ee[2]);
+<div class="w3-row">
+    <div class="w3-col m2 l1">
+        @Html.DropDownList("DDL_DEPARTMENT", (SelectList)ViewBag.ddl_Department)
+        @Html.Hidden("Count",0)
+    </div>
+    <div class="w3-col m2 l1">
+        @Html.DropDownList("DDL_BRANCH", (SelectList)ViewBag.ddl_Branch)
+    </div>
+    <div class="w3-right">
+        <input type="submit" value="submit" class="w3-btn w3-green w3-center registerbtn" />
+    </div>
+</div>
 
-                textcreadit = j + "(" + k + "-" + l + "-" + m + ")";
-            }
-            <tr>
-                <td>
-                    @Html.CheckBox("check" + i)
-                </td>
-                <td>
-                    @i
-                </td>
-                <td>
-                    @item.SUBJECT_ID
-                    @Html.Hidden("subject_id", item.SUBJECT_ID)
-                    @Html.Hidden("subject_hour", item.SECTION_TIME_END - item.SECTION_TIME_START)
-                </td>
-                <td>
-                    @item.SUBJECT_NAME
-                    @Html.Hidden("subject_name", item.SUBJECT_NAME)
-                </td>
-                <td>
-                    @item.SUBJECT_CREDIT
-                    @Html.Hidden("subject_credit", item.SUBJECT_CREDIT)
-                </td>
-                <td>
-                    @item.SECTION_NUMBER
-                    @Html.Hidden("subject_number", item.SECTION_NUMBER)
-                </td>
-            </tr>
-        }
-    </tbody>
-    <tfoot>
-        <tr>
-            <td></td>
-            <td></td>
-            <td class="text-right">
-                รวม
-            </td>
-            <td>
-                @textcreadit
-            </td>
-        </tr>
-    </tfoot>
-</table>
-<br />
-<br />
-<input name="gate" id="gate" value="" />
-@*<input name="gate1" id="gate1" value="" />
-<input name="gate2" id="gate2" value="" />*@
-@using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
-{
-    <table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
+    }
+<br>
+    <table class="table table-bordered" id="TableLocation">
         <thead>
-            <tr bgcolor="#D3D3D3">
-                <td><b>Day</b></td>
-                <td colspan="4" width="60px"><b>8:00</b></td>
-                <td colspan="4" width="60px"><b>9:00</b></td>
-                <td colspan="4" width="60px"><b>10:00</b></td>
-                <td colspan="4" width="60px"><b>11:00</b></td>
-                <td colspan="4" width="60px"><b>12:00</b></td>
-                <td colspan="4" width="60px"><b>13:00</b></td>
-                <td colspan="4" width="60px"><b>14:00</b></td>
-                <td colspan="4" width="60px"><b>15:00</b></td>
-                <td colspan="4" width="60px"><b>16:00</b></td>
-                <td colspan="4" width="60px"><b>17:00</b></td>
-                <td colspan="4" width="60px"><b>18:00</b></td>
-                <td colspan="4" width="60px"><b>19:00</b></td>
-                <td colspan="4" width="60px"><b>20:00</b></td>
-                <td colspan="4" width="60px"><b>21:00</b></td>
+            <tr>
+                <th></th>
+                <th>
+                    ลำดับ
+                </th>
+                <th>
+                    รหัสวิชา
+                </th>
+                <th>
+                    ชื่อวิชา
+                </th>
+                <th>
+                    หน่วยกิต
+                </th>
+                <th>
+                    ตอน
+                </th>
             </tr>
         </thead>
         <tbody>
-            @for (int a = 0; a < 6; a++)
+            @foreach (var item in Model.Where(x => x.SECTION_NUMBER != ""))
             {
-            <tr id="@date[a]" name="@date[a]" class="@date[a]">
-                <td>@date[a]</td>
-                @for (int b = 8; b <= 21; b++)
                 {
-                    var tid = date[a] + "id_" + b;
-                    var tname = date[a] + "name" + b;
-                    var check = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).LastOrDefault();
-                    var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
-                    if (check != null && check.SECTION_NUMBER != "")
-                    {
-                        var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Count();
-                        if (trigger == 1)
-                        {
-                            var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
-                            var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
-                            var TIME_START = int.Parse(tmp_TIME_START.ToString());
-                            var TIME_END = int.Parse(tmp_TIME_END.ToString());
-                            var TIME = (TIME_END - TIME_START) * 4;
-                            var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
-                            var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
-                            <td id="@tid" colspan="@TIME" class="droppable">
-                                <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
-                                    <div id="x_button" class="btn btn-default pull-right x_button text-center">
-                                        X
-                                        @Html.Hidden("x_value", TIME + "_" + date[a])
-                                    </div>
-                                    @*@Html.Hidden(tid, uid)
-                            @Html.Hidden(tname, uname)*@
-                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
-                                    @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
-                                </div>
-                            </td>
-                        }
-                        else if (trigger == 2)
-                        {
-                            var first = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).First();
-                            var second = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Last();
-                            int tmp_first = int.Parse(first.SECTION_TIME_START.ToString());
-                            int tmp_last = int.Parse(second.SECTION_TIME_END.ToString());
-                            var TIME = (tmp_last - tmp_first) * 4;
-                            <td id="@tid" colspan="@TIME" class="droppable">
-                                <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
-                                    <div id="x_button" class="btn btn-default pull-right x_button text-center">
-                                        X
-                                        @Html.Hidden("x_value", TIME + "_" + date[a])
-                                    </div>
+                    i++;
+                    string[] e = item.SUBJECT_CREDIT.Split('(', ')');
+                    j += int.Parse(e[0]);
+                    string[] ee = e[1].Split('-');
+                    k += int.Parse(ee[0]);
+                    l += int.Parse(ee[1]);
+                    m += int.Parse(ee[2]);
 
-                                    @first.SUBJECT_ID
-                                    @first.SUBJECT_NAME
-                                </div>
-                            </td>
-                        }
-                    }
-                    else
-                    {
-                        if (check1 == null)
-                        {
-                            <td id="@tid" class="droppable" height="50px" colspan="4"></td>
-                        }
-                        else
-                        {
-                            <td id="@tid" class="droppable" height="50px" colspan="4" style="display:none"></td>
-                        }
-                    }
-                    @*else if (check1 == null)
-
-            {
-                <td id="@tid" class="droppable" height="50px" colspan="4"></td>
-            }*@
+                    textcreadit = j + "(" + k + "-" + l + "-" + m + ")";
                 }
-            </tr>
+                <tr>
+                    <td>
+                        @Html.CheckBox("check" + i)
+                    </td>
+                    <td>
+                        @i
+                    </td>
+                    <td>
+                        @item.SUBJECT_ID
+                        @Html.Hidden("subject_id", item.SUBJECT_ID)
+                        @Html.Hidden("subject_hour", item.SECTION_TIME_END - item.SECTION_TIME_START)
+                    </td>
+                    <td>
+                        @item.SUBJECT_NAME
+                        @Html.Hidden("subject_name", item.SUBJECT_NAME)
+                    </td>
+                    <td>
+                        @item.SUBJECT_CREDIT
+                        @Html.Hidden("subject_credit", item.SUBJECT_CREDIT)
+                    </td>
+                    <td>
+                        @item.SECTION_NUMBER
+                        @Html.Hidden("subject_number", item.SECTION_NUMBER)
+                    </td>
+                </tr>
             }
         </tbody>
+        <tfoot>
+            <tr>
+                <td></td>
+                <td></td>
+                <td class="text-right">
+                    รวม
+                </td>
+                <td>
+                    @textcreadit
+                </td>
+            </tr>
+        </tfoot>
     </table>
-    <div>
-        <input type="submit" value="submit" class="w3-btn w3-green w3-center registerbtn" />
-    </div>
-}
+    <br />
+    <br />
+    <input name="gate" id="gate" value="" />
+    @*<input name="gate1" id="gate1" value="" />
+        <input name="gate2" id="gate2" value="" />*@
+    @using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
+    {
+        <table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
+            <thead>
+                <tr bgcolor="#D3D3D3">
+                    <td><b>Day</b></td>
+                    <td colspan="4" width="60px"><b>8:00</b></td>
+                    <td colspan="4" width="60px"><b>9:00</b></td>
+                    <td colspan="4" width="60px"><b>10:00</b></td>
+                    <td colspan="4" width="60px"><b>11:00</b></td>
+                    <td colspan="4" width="60px"><b>12:00</b></td>
+                    <td colspan="4" width="60px"><b>13:00</b></td>
+                    <td colspan="4" width="60px"><b>14:00</b></td>
+                    <td colspan="4" width="60px"><b>15:00</b></td>
+                    <td colspan="4" width="60px"><b>16:00</b></td>
+                    <td colspan="4" width="60px"><b>17:00</b></td>
+                    <td colspan="4" width="60px"><b>18:00</b></td>
+                    <td colspan="4" width="60px"><b>19:00</b></td>
+                    <td colspan="4" width="60px"><b>20:00</b></td>
+                    <td colspan="4" width="60px"><b>21:00</b></td>
+                </tr>
+            </thead>
+            <tbody>
+                @for (int a = 0; a < 6; a++)
+                {
+                    <tr id="@date[a]" name="@date[a]" class="@date[a]">
+                        <td>@date[a]</td>
+                        @for (int b = 8; b <= 21; b++)
+                        {
+                            var tid = date[a] + "id_" + b;
+                            var tname = date[a] + "name" + b;
+                            var check = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).LastOrDefault();
+                            var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+                            if (check != null && check.SECTION_NUMBER != "")
+                            {
+                                var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Count();
+                                if (trigger == 1)
+                                {
+                                    var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
+                                    var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
+                                    var TIME_START = int.Parse(tmp_TIME_START.ToString());
+                                    var TIME_END = int.Parse(tmp_TIME_END.ToString());
+                                    var TIME = (TIME_END - TIME_START) * 4;
+                                    var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                                    var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                                    <td id="@tid" colspan="@TIME" class="droppable">
+                                        <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
+                                            <div id="x_button" class="btn btn-default pull-right x_button text-center">
+                                                X
+                                                @Html.Hidden("x_value", TIME + "_" + date[a])
+                                            </div>
+                                            @*@Html.Hidden(tid, uid)
+                                                @Html.Hidden(tname, uname)*@
+                                            @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                                            @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                        </div>
+                                    </td>
+                                }
+                                else if (trigger == 2)
+                                {
+                                    var first = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).First();
+                                    var second = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Last();
+                                    int tmp_first = int.Parse(first.SECTION_TIME_START.ToString());
+                                    int tmp_last = int.Parse(second.SECTION_TIME_END.ToString());
+                                    var TIME = (tmp_last - tmp_first) * 4;
+                                    <td id="@tid" colspan="@TIME" class="droppable">
+                                        <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
+                                            <div id="x_button" class="btn btn-default pull-right x_button text-center">
+                                                X
+                                                @Html.Hidden("x_value", TIME + "_" + date[a])
+                                            </div>
+
+                                            @first.SUBJECT_ID
+                                            @first.SUBJECT_NAME
+                                        </div>
+                                    </td>
+                                }
+                            }
+                            else
+                            {
+                                if (check1 == null)
+                                {
+                                    <td id="@tid" class="droppable" height="50px" colspan="4"></td>
+                                }
+                                else
+                                {
+                                    <td id="@tid" class="droppable" height="50px" colspan="4" style="display:none"></td>
+                                }
+                            }
+                            @*else if (check1 == null)
+
+                                {
+                                    <td id="@tid" class="droppable" height="50px" colspan="4"></td>
+                                }*@
+                        }
+                    </tr>
+                }
+            </tbody>
+        </table>
+        <div>
+            <input type="submit" value="submit" class="w3-btn w3-green w3-center registerbtn" />
+        </div>
+    }
