--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -11,7 +11,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Home", "Index", "ImportExcel")</li>
-                <li>@Html.ActionLink("Next", "Index", "TimeSchedule")</li>
+                <li>@Html.ActionLink("TimeSchedule", "Index", "TimeSchedule")</li>
                 @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
             <ul class="nav navbar-nav navbar-right">
