--- a/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
+++ b/TestExcel/Views/Shared/_TimeScheduleLayout.cshtml
@@ -14,7 +14,7 @@
         Html.RenderPartial("_Navbar");
         //Html.RenderPartial("_Sidebar");
     }
-    <div class="container body-content">
+    <div class="container body-content w3-margin-top">
         @RenderBody()
         <hr />
         <footer>
