--- a/TestExcel/Views/Shared/_Navbar.cshtml
+++ b/TestExcel/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="navbar navbar-inverse navbar-fixed-top">
+﻿<div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -6,11 +6,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            @Html.ActionLink("Application name", "Index", "ImportExcel", new { area = "" }, new { @class = "navbar-brand" })
+            @Html.ActionLink("Home", "Index", "ImportExcel", new { area = "" }, new { @class = "navbar-brand" })
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li>@Html.ActionLink("Home", "Index", "ImportExcel")</li>
                 <li>@Html.ActionLink("TimeSchedule", "Index", "TimeSchedule")</li>
                 @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
             </ul>
