--- a/TestExcel/Views/TimeSchedule/Index.cshtml
+++ b/TestExcel/Views/TimeSchedule/Index.cshtml
@@ -1,11 +1,8 @@
 ﻿@model IEnumerable<TestExcel.Models.Section_Subject>
     @{
     ViewBag.Title = "Index";
-    int i = 0;
-    int j = 0;
-    int k = 0;
-    int l = 0;
-    int m = 0;
+    int i = 0; int j = 0;int k = 0;int l = 0;int m = 0;
+    string color;
     string textcreadit = "";
     string[] date = { "M", "T", "W", "H", "F", "S" };
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
@@ -14,7 +11,7 @@
         $(document).ready(function () {
             $("#DDL_DEPARTMENT").val(@ViewBag.DepartDDLSelected);
         $("#DDL_BRANCH").val(@ViewBag.DDLSelected);
-        });
+            });
     </script>
     <div class="w3-row w3-center fontup">
         @Html.ActionLink("คณะ/สาขา", "Index", "TimeSchedule" , new { style = "color:blue;font-size:20px" }) ||
@@ -62,24 +59,24 @@
         <tbody>
             @foreach (var item in Model.Where(x => x.SECTION_NUMBER != ""))
             {
-                {
-                    i++;
-                    string[] e = item.SUBJECT_CREDIT.Split('(', ')');
-                    if(e[0] != "")
-                    {
-                        j += int.Parse(e[0]);
-                        string[] ee = e[1].Split('-');
-                        k += int.Parse(ee[0]);
-                        l += int.Parse(ee[1]);
-                        m += int.Parse(ee[2]);
+            {
+            i++;
+            string[] e = item.SUBJECT_CREDIT.Split('(', ')');
+            if(e[0] != "")
+            {
+            j += int.Parse(e[0]);
+            string[] ee = e[1].Split('-');
+            k += int.Parse(ee[0]);
+            l += int.Parse(ee[1]);
+            m += int.Parse(ee[2]);
 
-                        textcreadit = j + "(" + k + "-" + l + "-" + m + ")";
-                    }
-                    else
-                    {
-                        textcreadit = "";
-                    }
-                }
+            textcreadit = j + "(" + k + "-" + l + "-" + m + ")";
+            }
+            else
+            {
+            textcreadit = "";
+            }
+            }
             <tr>
                 <td>
                     @Html.CheckBox("check" + i)
@@ -125,8 +122,6 @@
     <br />
     <br />
     <input name="gate" id="gate" value="" />
-    @*<input name="gate1" id="gate1" value="" />
-    <input name="gate2" id="gate2" value="" />*@
     @using (Html.BeginForm("updatedata", "TimeSchedule", FormMethod.Post))
     {
     <table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
@@ -158,30 +153,40 @@
                 {
                     var tid = date[a] + "id_" + b;
                     var tname = date[a] + "name" + b;
-                    var check = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).LastOrDefault();
+                    var WhereTimeDate = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]);
+                    var check = WhereTimeDate.LastOrDefault();
+                    var Bcolor = Model.Where(x => x.SUBJECT_CREDIT == "3(3-0-6)").Any();
+                    if (check != null && check.SUBJECT_CREDIT == "3(3-0-6)")
+                    {
+                        color = "#25b0ee";
+                    }
+                    else
+                    {
+                        color = "#D3D3D3";
+                    }
                     var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
                     if (check != null)
                     {
-                        var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_DATE == date[a]).Count();
+                        var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[a]).Count();
                         if (trigger == 1)
                         {
-                            var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
-                            var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
+                            var tmp_TIME_START = check.SECTION_TIME_START;
+                            var tmp_TIME_END = check.SECTION_TIME_END;
                             var TIME_START = int.Parse(tmp_TIME_START.ToString());
                             var TIME_END = int.Parse(tmp_TIME_END.ToString());
                             var TIME = (TIME_END - TIME_START) * 4;
-                            var uid = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
-                            var uname = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                            var uid = WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                            var uname = WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
                 <td id="@tid" colspan="@TIME" class="droppable">
-                    <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
+                    <div class="draggable" style="background-color:@color;width:100%;height:50px">
                         <div id="x_button" class="btn btn-default pull-right x_button text-center">
                             X
                             @Html.Hidden("x_value", TIME + "_" + date[a])
                         </div>
                         @*@Html.Hidden(tid, uid)
                         @Html.Hidden(tname, uname)*@
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
                     </div>
                 </td>
                 }
@@ -202,7 +207,7 @@
                 {
                 var TIME = (tmp_last - tmp_first) * 4;
                 <td id="@tid" colspan="@TIME" class="droppable">
-                    <div class="draggable" style="background-color:#D3D3D3;height:50px">
+                    <div class="draggable" style="background-color:@color;height:50px">
                         <div id="x_button" class="btn btn-default pull-right x_button text-center">
                             X
                             @Html.Hidden("x_value", TIME + "_" + date[a])
@@ -215,21 +220,21 @@
                 }
                 else if (tmpl_first != tmpl_last)
                 {
-                var tmp_TIME_START = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_START;
-                var tmp_TIME_END = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).Last().SECTION_TIME_END;
+                var tmp_TIME_START = WhereTimeDate.Last().SECTION_TIME_START;
+                var tmp_TIME_END = WhereTimeDate.Last().SECTION_TIME_END;
                 var TIME_START = int.Parse(tmp_TIME_START.ToString());
                 var TIME_END = int.Parse(tmp_TIME_END.ToString());
                 var TIME = (TIME_END - TIME_START) * 4;
 
                 <td id="@tid" colspan="@TIME" class="droppable">
-                    <div class="draggable" style="background-color:#D3D3D3;width:100%;height:50px">
+                    <div class="draggable" style="background-color:@color;width:100%;height:50px">
                         <div id="x_button" class="btn btn-default pull-right x_button text-center">
                             X
                             @Html.Hidden("x_value", TIME + "_" + date[a])
                         </div>
 
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
-                        @Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
                     </div>
                 </td>
                 }
@@ -246,11 +251,6 @@
                 <td id="@tid" class="droppable" height="50px" width="auto" colspan="4" style="display:none"></td>
                 }
                 }
-                @*else if (check1 == null)
-
-                {
-                <td id="@tid" class="droppable" height="50px" colspan="4"></td>
-                }*@
                 }
             </tr>
             }
