--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -1,13 +1,162 @@
-﻿
+﻿@model IEnumerable<TestExcel.Models.Section_Subject>
 @{
     ViewBag.Title = "TeSchedule";
+    string color;
+    string[] date = { "M", "T", "W", "H", "F", "S" };
     Layout = "~/Views/Shared/_TimeScheduleLayout.cshtml";
 }
+<script>
+        $(document).ready(function () {
+            $("#DDL_PROFESSOR").val(@ViewBag.PDDLSelected);
+            });
+</script>
 <div class="w3-row w3-center fontup">
     @Html.ActionLink("คณะ/สาขา", "Index", "TimeSchedule", new { style = "color:blue;font-size:20px" }) ||
     @Html.ActionLink("อาคาร/ห้องเรียน", "ClSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  ||
     @Html.ActionLink("ครูผู้สอน", "TeSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })
 </div>
 
-<h2>TeSchedule</h2>
+<h2>@ViewBag.PROFESSOR_SHORTNAME</h2>
 
+@using (Html.BeginForm("TeSchedule", "TimeSchedule", FormMethod.Post, new { id = "PROFESSOR_FORM", name = "PROFESSOR_FORM" }))
+{
+    <div class="w3-row">
+        <div class="w3-col m1 l1" style="margin-right:50px">
+            @Html.DropDownList("DDL_PROFESSOR", (SelectList)ViewBag.ddl_Professor, new { style = "width:100px" })
+        </div>
+    </div>
+
+}
+<br>
+<table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
+    <thead>
+        <tr bgcolor="#D3D3D3">
+            <td><b>Day</b></td>
+            <td colspan="4" width="60px"><b>8:00</b></td>
+            <td colspan="4" width="60px"><b>9:00</b></td>
+            <td colspan="4" width="60px"><b>10:00</b></td>
+            <td colspan="4" width="60px"><b>11:00</b></td>
+            <td colspan="4" width="60px"><b>12:00</b></td>
+            <td colspan="4" width="60px"><b>13:00</b></td>
+            <td colspan="4" width="60px"><b>14:00</b></td>
+            <td colspan="4" width="60px"><b>15:00</b></td>
+            <td colspan="4" width="60px"><b>16:00</b></td>
+            <td colspan="4" width="60px"><b>17:00</b></td>
+            <td colspan="4" width="60px"><b>18:00</b></td>
+            <td colspan="4" width="60px"><b>19:00</b></td>
+            <td colspan="4" width="60px"><b>20:00</b></td>
+            <td colspan="4" width="60px"><b>21:00</b></td>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int a = 0; a < 6; a++)
+        {
+            <tr id="@date[a]" name="@date[a]" class="@date[a]">
+                <td>@date[a]</td>
+                @for (int b = 8; b <= 21; b++)
+                {
+                    var tid = date[a] + "id_" + b;
+                    var tname = date[a] + "name" + b;
+                    var WhereTimeDate = Model.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[a]);
+                    var check = WhereTimeDate.LastOrDefault();
+                    var Bcolor = Model.Where(x => x.SUBJECT_CREDIT == "3(3-0-6)").Any();
+                    if (check != null && check.SUBJECT_CREDIT == "3(3-0-6)")
+                    {
+                        color = "#25b0ee";
+                    }
+                    else
+                    {
+                        color = "#D3D3D3";
+                    }
+                    var check1 = Model.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[a]).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+                    if (check != null)
+                    {
+                        var trigger = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[a]).Count();
+                        if (trigger == 1)
+                        {
+                            var tmp_TIME_START = check.SECTION_TIME_START;
+                            var tmp_TIME_END = check.SECTION_TIME_END;
+                            var TIME_START = int.Parse(tmp_TIME_START.ToString());
+                            var TIME_END = int.Parse(tmp_TIME_END.ToString());
+                            var TIME = (TIME_END - TIME_START) * 4;
+                            var uid = WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID;
+                            var uname = WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME;
+                            <td id="@tid" colspan="@TIME" class="droppable">
+                                <div class="draggable" style="background-color:@color;width:100%;height:50px">
+                                    <div id="x_button" class="btn btn-default pull-right x_button text-center">
+                                        X
+                                        @Html.Hidden("x_value", TIME + "_" + date[a])
+                                    </div>
+                                    @*@Html.Hidden(tid, uid)
+                                        @Html.Hidden(tname, uname)*@
+                                    @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                                    @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                </div>
+                            </td>
+                        }
+                        else if (trigger == 2)
+                        {
+                            var first = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).First();
+                            var second = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Last();
+                            int tmp_first = int.Parse(first.SECTION_TIME_START.ToString());
+                            int tmp_last = int.Parse(second.SECTION_TIME_END.ToString());
+
+                            int tmpl_first = int.Parse(first.SECTION_TIME_END.ToString());
+                            int tmpl_last = int.Parse(second.SECTION_TIME_START.ToString());
+                            if (tmpl_first == tmpl_last && check.SECTION_NUMBER == "")
+                            {
+                                <td id="@tid" class="droppable" height="50px" width="auto" colspan="4" style="display:none"></td>
+                            }
+                            else if (tmpl_first == tmpl_last)
+                            {
+                                var TIME = (tmp_last - tmp_first) * 4;
+                                <td id="@tid" colspan="@TIME" class="droppable">
+                                    <div class="draggable" style="background-color:@color;height:50px">
+                                        <div id="x_button" class="btn btn-default pull-right x_button text-center">
+                                            X
+                                            @Html.Hidden("x_value", TIME + "_" + date[a])
+                                        </div>
+
+                                        @first.SUBJECT_ID
+                                        @first.SUBJECT_NAME
+                                    </div>
+                                </td>
+                            }
+                            else if (tmpl_first != tmpl_last)
+                            {
+                                var tmp_TIME_START = WhereTimeDate.Last().SECTION_TIME_START;
+                                var tmp_TIME_END = WhereTimeDate.Last().SECTION_TIME_END;
+                                var TIME_START = int.Parse(tmp_TIME_START.ToString());
+                                var TIME_END = int.Parse(tmp_TIME_END.ToString());
+                                var TIME = (TIME_END - TIME_START) * 4;
+
+                                <td id="@tid" colspan="@TIME" class="droppable">
+                                    <div class="draggable" style="background-color:@color;width:100%;height:50px">
+                                        <div id="x_button" class="btn btn-default pull-right x_button text-center">
+                                            X
+                                            @Html.Hidden("x_value", TIME + "_" + date[a])
+                                        </div>
+
+                                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_ID
+                                        @WhereTimeDate.OrderBy(x => x.SECTION_TIME_START).LastOrDefault().SUBJECT_NAME
+                                    </div>
+                                </td>
+                            }
+                        }
+                    }
+                    else
+                    {
+                        if (check1 == null)
+                        {
+                            <td id="@tid" class="droppable" height="50px" width="auto" colspan="4"></td>
+                        }
+                        else
+                        {
+                            <td id="@tid" class="droppable" height="50px" width="auto" colspan="4" style="display:none"></td>
+                        }
+                    }
+                }
+            </tr>
+        }
+    </tbody>
+</table>
