--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -96,8 +96,8 @@
                         }
                         else if (trigger == 2)
                         {
-                            var first = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).First();
-                            var second = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID).Last();
+                            var first = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_DATE == date[a] && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME).First();
+                            var second = Model.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_DATE == date[a] && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME).Last();
                             int tmp_first = int.Parse(first.SECTION_TIME_START.ToString());
                             int tmp_last = int.Parse(second.SECTION_TIME_END.ToString());
 
