--- a/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/TeSchedule.cshtml
@@ -11,9 +11,10 @@
             });
 </script>
 <div class="w3-row w3-center fontup">
-    @Html.ActionLink("คณะ/สาขา", "Index", "TimeSchedule", new { style = "color:blue;font-size:20px" }) ||
-    @Html.ActionLink("อาคาร/ห้องเรียน", "ClSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  ||
-    @Html.ActionLink("ครูผู้สอน", "TeSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })
+    @Html.ActionLink("คณะ/สาขา", "Index", "TimeSchedule", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("อาคาร/ห้องเรียน", "ClSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("ครูผู้สอน", "TeSchedule", "TimeSchedule", new { style = "color:blue;font-size:20px" })  |
+    @Html.ActionLink("แก้ไขข้อมูล", "Section", "Data", new { style = "color:blue;font-size:20px" })  |
 </div>
 
 <h2>@ViewBag.PROFESSOR_SHORTNAME</h2>
