--- a/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
+++ b/TestExcel/Views/TimeSchedule/ClSchedule.cshtml
@@ -62,7 +62,7 @@ else
 <table class="table table-responsive" id="TableLocation2" style="font-size:14px" align=center border=1 cellspacing=0 cellpadding=3 bgcolor=#F1F1FD>
     <thead>
         <tr bgcolor="#D3D3D3">
-            <td><b>Day</b></td>
+            <td width="80px"><b>Day</b></td>
             <td colspan="4" width="60px"><b>8:00</b></td>
             <td colspan="4" width="60px"><b>9:00</b></td>
             <td colspan="4" width="60px"><b>10:00</b></td>
@@ -92,7 +92,7 @@ else
                     {
                         var tid = classroom + "id_" + b;
                         var tname = classroom + "name" + b;
-                        var WhereTimeDate = Model.Item1.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom);
+                        var WhereTimeDate = Model.Item1.Where(x => x.SECTION_TIME_START == b && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM.Contains(classroom));
                         var check = WhereTimeDate.LastOrDefault();
                         var Bcolor = Model.Item1.Where(x => x.SUBJECT_CREDIT == "3(3-0-6)").Any();
                         if (check != null && check.SUBJECT_CREDIT == "3(3-0-6)")
@@ -103,10 +103,10 @@ else
                         {
                             color = "#D3D3D3";
                         }
-                        var check1 = Model.Item1.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
+                        var check1 = Model.Item1.Where(x => x.SECTION_TIME_START <= b && x.SECTION_TIME_END > b && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM.Contains(classroom)).OrderBy(x => x.SECTION_TIME_START).LastOrDefault();
                         if (check != null)
                         {
-                            var trigger = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom).Count();
+                            var trigger = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM.Contains(classroom)).Count();
                             if (trigger == 1)
                             {
                                 var tmp_TIME_START = check.SECTION_TIME_START;
@@ -131,8 +131,8 @@ else
                             }
                             else if (trigger == 2)
                             {
-                                var first = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom).First();
-                                var second = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM == classroom).Last();
+                                var first = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM.Contains(classroom)).First();
+                                var second = Model.Item1.Where(x => x.SUBJECT_ID == check.SUBJECT_ID && x.SECTION_BRANCH_NAME == check.SECTION_BRANCH_NAME && x.SECTION_DATE == date[ViewBag.DATE] && x.SECTION_CLASSROOM.Contains(classroom)).Last();
                                 int tmp_first = int.Parse(first.SECTION_TIME_START.ToString());
                                 int tmp_last = int.Parse(second.SECTION_TIME_END.ToString());
 
